--- a/input/randomalgo.tex
+++ b/input/randomalgo.tex
@@ -4,8 +4,8 @@
 \algrenewcommand{\algorithmiccomment}[1]{\hskip2em$\rhd$ #1}
 
   \begin{algorithmic}[1]
-  \State \textbf{let} $boundary = 10$ \Comment{Any constant} 
-  \State \textbf{let} $\mathcal{S}=\{\}$; 
+  \State \textbf{let} $boundary := 10;$ \Comment{Any constant} 
+  \State \textbf{let} $\mathcal{S} := \{\}$; 
   \Comment{map<depth,boolean>}
   \State \Comment{$true$: $boundary+$} 
   \State \Comment{$false$: $boundary-$} 
