grammar checkin and last minute correct

--- a/input/background.tex
+++ b/input/background.tex
@@ -95,7 +95,7 @@ elements identified by $p$ and $q$:
   the elements $a$, $e$, $f$ and $g$ respectively. Also, depth-1 contains the
   bounds of the sequence $\langle [0], Begin \rangle$ and $\langle [99],End
   \rangle$. Depth-2 contains three identifiers $[10.13]$, $[10.42]$, and
-  $[10.92]$ labeling $b$, $c$ and $d$ respectively.  }
+  $[10.92]$ labelling $b$, $c$ and $d$ respectively.  }
 \label{fig:treeexample}
 \end{center}
 \end{figure}
@@ -140,7 +140,7 @@ pages. The top part shows the spectrum associated with the pages. A spectrum
 gives an overview of the editing behaviour associated with a page. It gives the
 revision number of each line of a document, i.e., the relative date of their
 insert operation.  As the left spectrum suggests, most of the insert operations
-situates the new elements at the end of the document, i.e., the last lines of
+situate the new elements at the end of the document, i.e., the last lines of
 the page are more recent. On the opposite, the second spectrum shows that most
 of the insert operations situates the newest elements at the beginning of the
 document.  The bottom figures associate the bit-length of the identifier of
