--- a/input/introduction.tex
+++ b/input/introduction.tex
@@ -22,7 +22,7 @@ behaviour. Some editing scenarios lead to a permanent loss in performance.
 In order to preserve the total order on the elements of the sequence, a unique
 and immutable identifier is associated with each basic element of the structure
 (character, line or paragraph according to the chosen granularity). This allows
-to distinguish two classes of sequence CRDTs:
+distinguishing two classes of sequence CRDTs:
 \begin{inparaenum}[(i)]
 \item Fixed size identifier (also called the tombstones class). This class
   includes WOOT~\cite{oster2006data}, WOOTO~\cite{weiss2007wooki},
