--- a/input/acknowledgements.tex
+++ b/input/acknowledgements.tex
@@ -1,5 +1,5 @@
 
-\section*{Acknowledgements}
+\section{Acknowledgements}
 We would like to thank the anonymous reviewers for their comments and
 suggestions which not only strenghten this work but also led to answer some
 thorny issues about future work.
