--- a/fp025-nedelec.tex
+++ b/fp025-nedelec.tex
@@ -61,28 +61,17 @@
 \let\crnotice\mycrnotice%
 \let\confname\myconfname%
 
-\permission{Permission to make digital or hard copies of all or part of this
-  work for personal or classroom use is granted without fee provided that
-  copies are not made or distributed for profit or commercial advantage and
-  that copies bear this notice and the full citation on the first
-  page. Copyrights for components of this work owned by others than ACM must be
-  honored. Abstracting with credit is permitted. To copy otherwise, or
-  republish, to post on servers or to redistribute to lists, requires prior
-  specific permission and/or a fee. Request permissions from
-  permissions@acm.org. (c) 2013 Association for Computing Machinery. ACM
+\permission{Copyright 2013 Association for Computing Machinery. ACM
   acknowledges that this contribution was authored or co-authored by an
   employee, contractor or affiliate of the national government of France. As
   such, the government of France retains a nonexclusive, royalty-free right to
   publish or reproduce this article, or to allow others to do so, for
-  Government purposes only.}
+  Government purposes only. Request permissions from permissions@acm.org.}
+\conferenceinfo{DocEng'13,}{September 10--13, 2013, Florence, Italy.}
+\copyrightetc{Copyright 2013 ACM \the\acmcopyr}
+\crdata{978-1-4503-1789-4/13/09\ ...\$15.00.\\
+  http://dx.doi.org/10.1145/2494266.2494278}
 
-  \conferenceinfo{DocEng'13,}{September 10--13, 2013,
-  Florence, Italy.}
-
-  \CopyrightYear{2013}
-
-  \crdata{978-1-4503-1789-4/13/09 \\
-    10.1145/2494266.2494278}
 
 \clubpenalty=10000 
 \widowpenalty = 10000
@@ -97,17 +86,17 @@
 
 %% Allocate sufficient space to include the full copyright in bottom left part
 %% of the first page
-\makeatletter
-\renewcommand\@copyrightspace{
-\@float{copyrightbox}[b]
-\begin{center}
-\setlength{\unitlength}{1pc}
-\begin{picture}(20,9) %Space for copyright notice
-\put(0,-0.95){\crnotice{\@toappear}}
-\end{picture}
-\end{center}
-\end@float}
-\makeatother
+%\makeatletter
+%\renewcommand\@copyrightspace{
+%\@float{copyrightbox}[b]
+%\begin{center}
+%\setlength{\unitlength}{1pc}
+%\begin{picture}(20,9) %Space for copyright notice
+%\put(0,-0.95){\crnotice{\@toappear}}
+%\end{picture}
+%\end{center}
+%\end@float}
+%\makeatother
 
 
 \newtheorem{Def}{Definition}
@@ -118,6 +107,7 @@
 
   \input{input/abstract.tex}
   \input{input/categorieskeywords.tex}
+  \newpage
   \input{input/introduction.tex}
   \input{input/background.tex}
   \input{input/proposal.tex}
@@ -128,9 +118,10 @@
   \input{input/acknowledgements.tex}
 
 %% Bibliographie
-  \bibliographystyle{plainnat}
+  \bibliographystyle{abbrv}
+  \raggedright
   \bibliography{bibliographie}
-  \addcontentsline{toc}{chapter}{Bibliographie} 
+%  \addcontentsline{toc}{chapter}{Bibliographie} 
   \clearpage
   
 \end{document}
