--- a/input/conclusion.tex
+++ b/input/conclusion.tex
@@ -27,8 +27,8 @@ behaviour. But we believe that Treedoc's heuristic could be improved with this
 allocation strategy.
 
 Future works include a formal demonstration of the empiric poly-logarithmic
-upper-bound in space complexity which implies a probabilistic study of the
-worst-case. The idea is to prove that its probability of happening is
+upper-bound in space complexity of \NAME{} which implies a probabilistic study
+of its worst-case. The idea is to prove that its probability of happening is
 negligible. We also plan to study if concurrency affects LSEQ results, i.e., if
 each site makes different allocation choices concurrently, does it impact
 \NAME{} performances? Finally, we aim to study if using documents spectrum
