--- a/input/randomalgo.tex
+++ b/input/randomalgo.tex
@@ -13,20 +13,22 @@
 
     \Function{alloc}{p, q $\in \mathcal{I}$}
     
-      \State \textbf{let} $depth := 0$; $interval := 0$;
+      \State \textbf{let} $depth := 0$;
+      \State \textbf{let} $interval := 0$;
 
       \While{$(interval < 1)$} \Comment{Not enough for 1 insert}
         \State $depth++$;
         \State $interval := prefix(q,depth) - prefix(p,depth) -1$;
       \EndWhile
-      
       \State \textbf{let} $ste p:= min(boundary,interval)$; \Comment{Process 
         the maximum step to stay between $p$ and $q$}
+      \State
 
       \If{$not(\mathcal{S}.exist(depth))$} \Comment{add the new entry}
         \State \textbf{let} $rand := RandBool()$;
         \State  $\mathcal{S}.set(depth, rand)$;
       \EndIf
+
       \If{$\mathcal{S}.get(depth)$} \Comment{$boundary+$}
         \State \textbf{let} $addVal := RandInt(0,step)+1$;
         \State \textbf{let} $id := prefix(p,depth) + addVal$;
