--- a/input/validations.tex
+++ b/input/validations.tex
@@ -21,8 +21,8 @@ approaches. They do not impact on the complexity and can be drastically
 compressed. Consequently, it is the digit part that reflects the significant
 improvements.
 
-To evaluate \NAME{} performance, we developed a Java framework called LSEQ and
-released the source on GitHub platform under the terms of the GPL
+In order to evaluate \NAME{} performance, we developed a Java framework called
+LSEQ and released the source on GitHub platform under the terms of the GPL
 licence~\footnote{\url{https://github.com/Chat-Wane/LSEQ}}.
 
 \subsection{Synthetic Documents Experiments}
@@ -260,9 +260,9 @@ and end editing spectrum. We compare the following two setups:
 \paragraph{End Editing in Wikipedia}
 \begin{asparadesc}
   
-\item[Objective:] to confirm that \textbf{\NAME{}}$^\approx$ and transitively
-  \NAME{} brings an improvement on the allocation of identifiers, even in cases
-  where previous approaches are known to be good.
+\item[Objective:] to confirm that \textbf{\NAME{}}$^\approx$ (and consequently
+  \NAME{}) brings an improvement on the allocation of identifiers, even in
+  cases where previous approaches are known to be good.
 
 \item[Description:] the Wikipedia page
   chosen\footnote{\url{http://fr.wikipedia.org/wiki/Liste_des_bureaux_de_poste_français_classés_par_oblitération_Petits_Chiffres}}
